<?xml version="1.0"?>
<package format="2">
  <name>json_conversions</name>
  <version>0.0.0</version>
  <description>JSON ROS conversions</description>

  <author email="pbovbel@locusrobotics.com">Paul Bovbel</author>
  <maintainer email="pbovbel@locusrobotics.com">Paul Bovbel</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>json_msgs</depend>
  <depend>roscpp</depend>

</package>
